--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.arleth.heroku</groupId>
   <artifactId>mule-launcher</artifactId>
+  <packaging>pom</packaging>
   <version>1.0.0-SNAPSHOT</version>
 
   <properties>
